Bug 409969 - No context menu entry for adding messages to sequence diagram
Summary: No context menu entry for adding messages to sequence diagram
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.28.3 (KDE Applications 19.04.3)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-07-18 21:56 UTC by Ralf Habacker
Modified: 2019-07-18 22:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.28.80 (KDE Applications 19.07.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-07-18 21:56:49 UTC
For faster adding it would be nice to have context menu entries for adding messages in sequence diagrams.


STEPS TO REPRODUCE
1. start umbrello
2. add sequence diagram and two objects
3. move mouse on the line of the first object and open context menu

OBSERVED RESULT
There are no entries for adding messages

EXPECTED RESULT
There should be entries for adding messages

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Ralf Habacker 2019-07-18 22:06:03 UTC
Git commit d3cd29d43f944df3203d822a7cb2d0d0b547b173 by Ralf Habacker.
Committed on 18/07/2019 at 22:05.
Pushed by habacker into branch 'Applications/19.08'.

Fix 'No context menu entry for adding messages to sequence diagram'

With this patch UMLscene::m_pToolBarState and m_pToolBarStateFactory has
been moved into class UMLScenePrivate for easier access.

The "found" message is added to the context menu if no object line is
selected, all other message requires to open the context menu on the
widget line of an object.
FIXED-IN:2.28.80 (KDE Applications 19.07.80)

M  +4    -0    umbrello/menus/listpopupmenu.h
M  +7    -0    umbrello/menus/umlscenepopupmenu.cpp
M  +70   -16   umbrello/umlscene.cpp
M  +1    -2    umbrello/umlscene.h
M  +9    -0    umbrello/umlwidgets/umlwidget.cpp

https://commits.kde.org/umbrello/d3cd29d43f944df3203d822a7cb2d0d0b547b173
Comment 2 Ralf Habacker 2019-07-18 22:16:37 UTC
Git commit 1091592d3088ff4fba24bfa9528462c074b349c1 by Ralf Habacker.
Committed on 18/07/2019 at 22:16.
Pushed by habacker into branch 'Applications/19.08'.

Fix crash accessing uninitialized memory on loading files

ToolBarStateFactory::m_states were not initialized correctly.

M  +1    -1    umbrello/toolbarstatefactory.cpp
M  +2    -1    umbrello/toolbarstatefactory.h

https://commits.kde.org/umbrello/1091592d3088ff4fba24bfa9528462c074b349c1
Comment 3 Ralf Habacker 2019-07-18 22:54:30 UTC
Git commit d12972cc12c17dec182074ab071835f8591b5594 by Ralf Habacker.
Committed on 18/07/2019 at 22:54.
Pushed by habacker into branch 'Applications/19.08'.

After adding message by context menu reset work tool bar to arrow

This is necessary because the state of the toolbar, which is now changed
via the context menu, is bound to the toolbar.

M  +4    -0    umbrello/toolbarstate.h
M  +1    -0    umbrello/toolbarstateassociation.cpp
M  +1    -0    umbrello/toolbarstatemessages.cpp
M  +2    -0    umbrello/umlscene.cpp
M  +1    -1    umbrello/umlwidgets/toolbarstateonewidget.cpp

https://commits.kde.org/umbrello/d12972cc12c17dec182074ab071835f8591b5594